--- a/responsive-web-design-fundamentals/Project3/responsive.css
+++ b/responsive-web-design-fundamentals/Project3/responsive.css
@@ -11,8 +11,20 @@
   order: 10;
 }
 
+p {
+  max-width: 100%;
+  max-height: 3.75em;
+  font-size: 14px;
+  line-height: 1.25em;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+}
+
 @media screen and (max-width: 499px) {
-  .scores__location {
+  .snippet__thumbnail, .scores__location {
     display: none;
   }
 }
@@ -25,7 +37,7 @@
   .header__title {
     margin-left: 0;
     font-size: 2em;
-    vertical-align: bottom; 
+    vertical-align: bottom;
   }
   .nav {
     z-index: 10;
