--- a/intro-to-HTML-and-CSS/portfolio/toplist/style.css
+++ b/intro-to-HTML-and-CSS/portfolio/toplist/style.css
@@ -1,11 +1,16 @@
-* {
+/** {
    outline: 1px solid red !important;
-}
+}*/
+
 * {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     -ms-box-sizing: border-box;
     box-sizing: border-box;
+}
+
+.title {
+  background-color: #33BEBE;
 }
 
 .app {
@@ -18,4 +23,5 @@
 
 .screenshot {
   max-width: 460px;
+  margin-right: 30px;
 }
